--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs-com": "^3.2.0",
+    "google-maps": "^4.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
+    "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
