--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
     "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
